--- a/templates/portfolios/detail.html
+++ b/templates/portfolios/detail.html
@@ -1,1 +1,10 @@
-{{ portfolio }}
+{% extends "base.html" %}
+
+{% block title %}Portfolios Details{% endblock %}
+
+{% block content %}
+<h1>Portfolio Details</h1>
+
+<h3>{{ portfolio.name }}</h3>
+<p>{{ portfolio.date_created }}</p>
+{% endblock %}
