added debug-toolbar, a profile edit page for auth'd users, a sign out page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,16 @@
 body {
-  background-color: #f1f1f1;
+  background-color: #fbfbfb;
 }
 
 .align-right {
   text-align: right;
+}
+
+table tr td.align-right {
+  text-align: right;
+}
+
+
+table th {
+  background-color: #f1f1f1;
 }
