--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,7 +1,10 @@
-{% extends "base.html" %}
+{% extends "base_one_column.html" %}
 
 {% block title %}Home{% endblock %}
 
-{% block content %}
-Homepage
-{% endblock %}
+{% block content_inner %}
+      <h1>PortfolioApp</h1>
+      <h2>The easy to use, full featured portfolio tracker</h2>
+      <p>Click below to view your portfolios</p>
+      <p><a href="{% url 'portfolio_index' %}">Portfolios</a></p>
+{% endblock content_inner %}
