--- a/templates/profiles/signin.html
+++ b/templates/profiles/signin.html
@@ -1,19 +1,19 @@
-{% extends "base.html" %}
+{% extends "base_one_column.html" %}
 
 {% block title %}Sign In{% endblock %}
 
-{% block content %}
+{% block content_inner %}
 
 <h1>Sign in</h1>
 
 {% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
+<p>Your email address and password didn't match. Please try again.</p>
 {% endif %}
 
 <form method="post" action="{% url 'django.contrib.auth.views.login' %}" class="form-horizontal">
   {% csrf_token %}
   <div class="control-group">
-    <label class="control-label" for="{{ form.username.auto_id }}">Username</label>
+    <label class="control-label" for="{{ form.username.auto_id }}">Email</label>
     <div class="controls">
       <input type="text" id="{{ form.username.auto_id }}" placeholder="Email" name="{{ form.username.html_name }}">
     </div>
@@ -33,4 +33,4 @@
 
 </form>
 
-{% endblock %}
+{% endblock content_inner %}
