--- a/templates/holdings/index.html
+++ b/templates/holdings/index.html
@@ -3,37 +3,37 @@
 {% block title %}Holdings{% endblock %}
 
 {% block content_inner %}
-    <div><a href="/">Home</a> / <a href="{% url 'portfolio_index' %}">Portfolios</a> / {{ portfolio.name }}</div>
+<div><a href="/">Home</a> / <a href="{% url 'portfolio_index' %}">Portfolios</a> / {{ portfolio.name }}</div>
 
-    <h1>Holdings</h1>
+<h1>Holdings</h1>
 
-    {% if holding_list %}
-    <table class="table">
-      <tr>
-        <th>Name</th>
-        <th>Symbol</th>
-        <th>Quantity</th>
-        <th>Current Price</th>
-        <th>Book Value</th>
-        <th>Market Value</th>
-      </tr>
-      {% for holding in holding_list %}
-      <tr>
-        <td>{{ holding.name }}</td>
-        <td>{{ holding.market_symbol }}</td>
-        <td class="align-right">1.2345</td>
-        <td class="align-right">1.23</td>
-        <td class="align-right">$100.00</td>
-        <td class="align-right">$1000.00</td>
-      </tr>
-      {% endfor %}
-    {% else %}
-    <p>You currently have no holdings in this portfolio - <a href="#">go ahead and add some now!</a></p>
-    {% endif %}
-    </table>
+{% if holding_list %}
+<table class="table">
+  <tr>
+    <th>Name</th>
+    <th>Symbol</th>
+    <th>Quantity</th>
+    <th>Current Price</th>
+    <th>Book Value</th>
+    <th>Market Value</th>
+  </tr>
+  {% for holding in holding_list %}
+  <tr>
+    <td><a href="#">{{ holding.name }}</a></td>
+    <td>{{ holding.market_symbol }}</td>
+    <td class="align-right">1.2345</td>
+    <td class="align-right">1.23</td>
+    <td class="align-right">$100.00</td>
+    <td class="align-right">$1000.00</td>
+  </tr>
+  {% endfor %}
+{% else %}
+<p>You currently have no holdings in this portfolio - <a href="#">go ahead and add some now!</a></p>
+{% endif %}
+</table>
 
 {% endblock content_inner %}
 
 {% block content_sidebar %}
-    Sidebar
+Sidebar
 {% endblock content_sidebar %}
