--- a/templates/transactions/index.html
+++ b/templates/transactions/index.html
@@ -1,1 +1,39 @@
-HELLO
+{% extends "base_two_columns.html" %}
+
+{% block title %}Transactions{% endblock %}
+
+{% block content_inner %}
+<div><a href="/">Home</a> / <a href="{% url 'portfolio_index' %}">Portfolios</a> / {{ portfolio.name }}</div>
+
+<h1>Transactions</h1>
+
+{#{% if holding_list %}#}
+{#<table class="table">#}
+{#  <tr>#}
+{#    <th>Name</th>#}
+{#    <th>Symbol</th>#}
+{#    <th>Quantity</th>#}
+{#    <th>Current Price</th>#}
+{#    <th>Book Value</th>#}
+{#    <th>Market Value</th>#}
+{#  </tr>#}
+{#  {% for holding in holding_list %}#}
+{#  <tr>#}
+{#    <td>{{ holding.name }}</td>#}
+{#    <td>{{ holding.market_symbol }}</td>#}
+{#    <td class="align-right">1.2345</td>#}
+{#    <td class="align-right">1.23</td>#}
+{#    <td class="align-right">$100.00</td>#}
+{#    <td class="align-right">$1000.00</td>#}
+{#  </tr>#}
+{#  {% endfor %}#}
+{#{% else %}#}
+{#<p>You currently have no holdings in this portfolio - <a href="#">go ahead and add some now!</a></p>#}
+{#{% endif %}#}
+{#</table>#}
+
+{% endblock content_inner %}
+
+{% block content_sidebar %}
+Sidebar
+{% endblock content_sidebar %}
