transactions list for a holding in place, clean up to some templates, focus-fielded edit and sign up form pages

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,14 @@ table tr td.align-right {
   text-align: right;
 }
 
-
 table th {
   background-color: #f1f1f1;
+}
+
+.navbar {
+  height: 70px;
+}
+
+.breadcrumbs{
+  font-size: 12px;
 }
