--- a/templates/base_two_columns.html
+++ b/templates/base_two_columns.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
 
+{% block breadcrumbs %}{% endblock breadcrumbs %}
+
 {% block content_outer %}
-      <div class="row">
-        <div class="span10">
-          {% block content_inner %}{% endblock content_inner %}
-        </div>
-        <div class="span4">
-          {% block content_sidebar %}{% endblock content_sidebar %}
-        </div>
-      </div>
+<div class="row">
+  <div class="span10">
+    {% block content %}{% endblock content %}
+  </div>
+  <div class="span4">
+    {% block sidebar %}{% endblock sidebar %}
+  </div>
+</div>
 {% endblock content_outer %}
