--- a/templates/profiles/edit.html
+++ b/templates/profiles/edit.html
@@ -1,8 +1,11 @@
 {% extends "base_two_columns.html" %}
 
-{% block title %}Edit Profile{% endblock %}
+{% block title %}Edit Profile{% endblock title %}
 
-{% block content_inner %}
+{% block breadcrumbs %}<a href="/">Home</a> &rarr; Profile{% endblock breadcrumbs %}
+
+{% block content %}
+
 <h1>Edit Profile</h1>
 
 <p>This is the edit profile screen.</p>
@@ -37,17 +40,21 @@
   <div class="control-group">
     <div class="controls">
       <button type="submit" class="btn btn-primary">Save profile</button>
-      <button type="submit" class="btn">Cancel</button>
+      <button type="submit" class="btn" name="cancel">Cancel</button>
     </div>
   </div>
 </form>
 
-{% endblock content_inner %}
+{% endblock content %}
 
-{% block content_sidebar %}
+{% block sidebar %}
 <p>Sidebar</p>
-{% endblock content_sidebar %}
+{% endblock sidebar %}
 
 {% block script %}
-
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('#id_email').focus();
+  });
+</script>
 {% endblock script %}
