--- a/templates/profiles/signin.html
+++ b/templates/profiles/signin.html
@@ -1,8 +1,8 @@
 {% extends "base_one_column.html" %}
 
-{% block title %}Sign In{% endblock %}
+{% block title %}Sign In{% endblock title %}
 
-{% block content_inner %}
+{% block content %}
 
 <h1>Sign in</h1>
 
@@ -33,4 +33,4 @@
 
 </form>
 
-{% endblock content_inner %}
+{% endblock content %}
