--- a/templates/profiles/signout.html
+++ b/templates/profiles/signout.html
@@ -1,11 +1,11 @@
 {% extends "base_one_column.html" %}
 
-{% block title %}Sign out{% endblock %}
+{% block title %}Sign out{% endblock title %}
 
-{% block content_inner %}
+{% block content %}
 
 <h1>Sign out</h1>
 
 <p>You have successfully been signed out.</p>
 
-{% endblock content_inner %}
+{% endblock content %}
