cleanup for single column template, cleanup in settings.py

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 <head id="portfolioapp" data-template-set="portfolioapp" profile="http://gmpg.org/xfn/11">
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0">
-  <title>{% block title %}Home{% endblock %} - PortfolioApp</title>
+  <title>{% block title %}Home{% endblock title  %} - PortfolioApp</title>
 
   <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="{{ STATIC_URL }}css/styles.css" rel="stylesheet" media="screen">
