--- a/templates/base_one_column.html
+++ b/templates/base_one_column.html
@@ -3,7 +3,7 @@
 {% block content_outer %}
   <div class="row">
     <div class="span14">
-      {% block content_inner %}{% endblock content_inner %}
+      {% block content %}{% endblock content %}
     </div>
   </div>
 {% endblock content_outer %}
