--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,7 @@
         <a class="brand" href="/">PortfolioApp</a>
         <ul class="nav">
           <li><a href="/portfolios">Portfolios</a></li>
+          <li><a href="/transactions">Transactions</a></li>
         </ul>
         <ul class="nav pull-right">
           {% if user.is_staff %}
