global transaction list enhancements; added category for transactions

--- a/templates/transactions/index.html
+++ b/templates/transactions/index.html
@@ -19,7 +19,7 @@
   <tr>
     <td>{{ transaction.date_created }}</td>
     <td>{{ transaction.quantity }}</td>
-    <td>{{ transaction.amount }}</td>
+    <td>{{ transaction.price }}</td>
   </tr>
   {% endfor %}
 </table>
