template directory structure cleanup; comment and commission fields added on transactions; custom save logic on transaction model for sign changing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,6 +18,14 @@ table th {
   height: 70px;
 }
 
-.breadcrumbs{
+.breadcrumbs {
   font-size: 12px;
+}
+
+.table {
+  font-size: 13px;
+}
+
+.link-add {
+  font-size: 15px;
 }
