--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -23,7 +23,7 @@
   </tr>
   {% for holding in holdings %}
   <tr>
-    <td><a href="#">{{ holding.name }} ({{ holding.market }}:{{ holding.symbol }})</a></td>
+    <td><a href="{% url 'transaction_index' portfolio.id holding.id %}">{{ holding.name }} ({{ holding.market }}:{{ holding.symbol }})</a></td>
     <td class="align-right">{{ holding.total_quantity|default_if_none:"0.00"|intcomma }}</td>
     <td class="align-right">${{ holding.total_price|default_if_none:"0.00"|floatformat:2|intcomma }}</td>
     <td class="align-right">${{ holding.book_value|floatformat:2|intcomma }}</td>
