--- a/templates/portfolios/portfolios/index.html
+++ b/templates/portfolios/portfolios/index.html
@@ -12,16 +12,14 @@
 {% if portfolios %}
 <table class="table">
   <tr>
-    <th>Name</th>
-    <th>Holdings</th>
-    <th>Book Value</th>
-    <th>Market Value</th>
-    <th>Growth</th>
+    <th style="width: 50%;">Name</th>
+    <th class="align-right" style="width: 13%;">Book Value</th>
+    <th class="align-right" style="width: 13%;">Market Value</th>
+    <th class="align-right" style="width: 14%;">Growth</th>
   </tr>
 {% for portfolio in portfolios %}
   <tr>
     <td><a href="{% url 'holding_index' portfolio.id %}">{{ portfolio.name }}</a></td>
-    <td class="align-right">{{ portfolio.holding_count|intcomma }}</td>
     <td class="align-right">${{ portfolio.book_value|floatformat:2|intcomma }}</td>
     <td class="align-right">$2000.00</td>
     <td class="align-right">$1000.00 (100.0%)</td>
