--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -13,30 +13,27 @@
 <table class="table">
   <tr>
     <th>Name</th>
-    <th class="align-right">Position</th>
-    <th class="align-right">Cost<br /><span class="small">Avg</span></th>
-    <th class="align-right">Book Value</th>
     <th class="align-right">Last Price</th>
+    <th class="align-right">Position</th>
+    <th class="align-right">Book Value<br /><span class="small">Avg Cost</span></th>
     <th class="align-right">Market Value</th>
     <th class="align-right">Net Gain ($)<br /><span class="small">(%)</span></th>
-    <th class="align-right">% of Portfolio</th>
+    <th class="align-right">Portfolio Makeup</th>
   </tr>
   {% for holding in holdings %}
   <tr>
     <td><a href="{% url 'transaction_index' portfolio.id holding.id %}">{{ holding.name }} ({{ holding.market }}:{{ holding.symbol }})</a></td>
-    <td class="align-right">{{ holding.total_quantity|default_if_none:"0.00"|floatformat:5|intcomma }}</td>
-    <td class="align-right">${{ holding.total_cost|default_if_none:"0.00"|floatformat:2|intcomma }}<br /><span class="small">$34.44</span></td>
-    <td class="align-right">${{ holding.book_value|floatformat:2|intcomma }}</td>
     <td class="align-right">$45.12<br /><span class="small">1:00pm PST</span></td>
-    <td class="align-right">$1000.00</td>
-    <td {% if holding.market_value > holding.book_value %}class="align-right indicator-gain"{% elif holding.market_value < holding.book_value %}class="align-right indicator-gain"{% else %}class="align-right indicator-gain"{% endif %}>$1.33<br /><span class="small">0.23%</span></td>
+    <td class="align-right">{{ holding.total_quantity|default_if_none:"0.00"|floatformat:5|intcomma }}</td>
+    <td class="align-right">${{ holding.book_value|floatformat:2|intcomma }}<br />${{ holding.avg_cost|default_if_none:"0.00"|floatformat:2|intcomma }}</td>
+    <td class="align-right">${{ holding.market_value|floatformat:2|intcomma }}</td>
+    <td {% if holding.market_value > holding.book_value %}class="align-right indicator-gain"{% elif holding.market_value < holding.book_value %}class="align-right indicator-loss"{% else %}class="align-right"{% endif %}>$1.33<br /><span class="small">0.23%</span></td>
     <td class="align-right">32.33%</td>
   </tr>
   {% endfor %}
   <tr>
     <td colspan="3">Cash</td>
     <td class="align-right">$100.32</td>
-    <td>&nbsp;</td>
     <td class="align-right">$100.32</td>
     <td>&nbsp;</td>
     <td class="align-right">3.00%</td>
@@ -44,7 +41,6 @@
   <tr>
     <td colspan="3"><strong>Total</strong></td>
     <td class="align-right"><strong>$3456.33</strong></td>
-    <td>&nbsp;</td>
     <td class="align-right"><strong>$3456.33</strong></td>
     <td>&nbsp;</td>
     <td class="align-right">100%</td>
