--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -22,12 +22,12 @@
   </tr>
   {% for holding in holdings %}
   <tr>
-    <td><a href="{% url 'transaction_index' portfolio.id holding.id %}">{{ holding.name }} ({{ holding.market }}:{{ holding.symbol }})</a></td>
-    <td class="align-right">$45.12<br /><span class="small">1:00pm PST</span></td>
+    <td><a href="{% url 'transaction_index' portfolio.id holding.id %}">{{ holding.name }} ({{ holding.symbol }}:{{ holding.market_name }})</a></td>
+    <td class="align-right">${{ holding.last_price|floatformat:2|intcomma }}<br /><span class="small">1:00pm PST</span></td>
     <td class="align-right">{{ holding.total_quantity|default_if_none:"0.00"|floatformat:5|intcomma }}</td>
     <td class="align-right">${{ holding.book_value|floatformat:2|intcomma }}<br />${{ holding.avg_cost|default_if_none:"0.00"|floatformat:2|intcomma }}</td>
     <td class="align-right">${{ holding.market_value|floatformat:2|intcomma }}</td>
-    <td {% if holding.market_value > holding.book_value %}class="align-right indicator-gain"{% elif holding.market_value < holding.book_value %}class="align-right indicator-loss"{% else %}class="align-right"{% endif %}>$1.33<br /><span class="small">0.23%</span></td>
+    <td {% if holding.market_value > holding.book_value %}class="align-right indicator-gain"{% elif holding.market_value < holding.book_value %}class="align-right indicator-loss"{% else %}class="align-right"{% endif %}>${{ holding.net_gain_dollar|floatformat:2|intcomma }}<br /><span class="small">{{ holding.net_gain_percent|floatformat:2|intcomma }}%</span></td>
     <td class="align-right">32.33%</td>
   </tr>
   {% endfor %}
