--- a/templates/base_two_columns.html
+++ b/templates/base_two_columns.html
@@ -12,3 +12,7 @@
   </div>
 </div>
 {% endblock content_outer %}
+
+{% block script_end_outer %}
+  {% block script %}{% endblock script %}
+{% endblock script_end_outer %}
