--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,9 @@
   <meta name="viewport" content="initial-scale=1.0">
   <title>{% block title %}Home{% endblock title  %} - PortfolioApp</title>
 
-  <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet" media="screen">
-  <link href="{{ STATIC_URL }}css/styles.css" rel="stylesheet" media="screen">
+  <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet" type="text/css" media="screen">
+  <link href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="{{ STATIC_URL }}css/styles.css" rel="stylesheet" type="text/css" media="screen">
 
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="#">
   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="#">
@@ -22,7 +23,8 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script>
+  <script src="http://code.jquery.com/jquery-1.9.0.js" type="text/javascript"></script>
+  <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js" type="text/javascript"></script>
 
   <meta property="og:locale" content="en_US">
   <meta property="og:title" content="">
@@ -91,7 +93,7 @@
   </div>
 </footer>
 
-{% block script %}{% endblock script %}
+{% block script_end_outer %}{% endblock script_end_outer %}
 
 </body>
 </html>
