--- a/templates/base_one_column.html
+++ b/templates/base_one_column.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block breadcrumbs %}{% endblock breadcrumbs %}
+
 {% block content_outer %}
   <div class="row">
     <div class="span14">
@@ -7,3 +9,7 @@
     </div>
   </div>
 {% endblock content_outer %}
+
+{% block script_end_outer %}
+  {% block script %}{% endblock script %}
+{% endblock script_end_outer %}
