--- a/templates/portfolios/holdings/create.html
+++ b/templates/portfolios/holdings/create.html
@@ -1,16 +1,27 @@
 {% extends "base_two_columns.html" %}
 
-{% block title %}Add Holding{% endblock title %}
+{% block title %}Add a Holding{% endblock title %}
 
-{% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url 'portfolio_index' %}">Portfolios</a> &rarr; <a href="{% url 'holding_index' portfolio.id %}">{{ portfolio.name }}</a> &rarr; Add Holding{% endblock breadcrumbs %}
+{% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url 'portfolio_index' %}">Portfolios</a> &rarr; <a href="{% url 'holding_index' portfolio.id %}">{{ portfolio.name }}</a> &rarr; Add a Holding{% endblock breadcrumbs %}
 
 {% block content %}
 
 <h1>Add a Holding</h1>
 
-<form action="">
+<p>&nbsp;</p>
 
-  <input type="submit" class="btn btn-primary" value="Create holding" />
+<form action="" class="form-horizontal">
+  <div class="control-group">
+    <label class="control-label" for="stocks">Stock: </label>
+    <div class="controls">
+      <input id="stocks" type="text" placeholder="examples: BlackBerry:TSX, Microsoft Corp:NASDAQ" class="input-xxlarge">
+    </div>
+  </div>
+  <div class="control-group">
+    <div class="controls">
+      <input type="submit" class="btn btn-primary" value="Create holding" />
+    </div>
+  </div>
 </form>
 
 
@@ -19,3 +30,7 @@
 {% block sidebar %}
 Sidebar
 {% endblock sidebar %}
+
+{% block script %}
+<script src="{{ STATIC_URL }}js/holdings.js" type="text/javascript"></script>
+{% endblock script %}
