--- a/templates/profiles/signup.html
+++ b/templates/profiles/signup.html
@@ -1,12 +1,12 @@
 {% extends "base_two_columns.html" %}
 
-{% block title %}Create Profile{% endblock title %}
+{% block title %}Sign up{% endblock title %}
 
-{% block breadcrumbs %}<a href="/">Home</a> &rarr; Create Profile{% endblock breadcrumbs %}
+{% block breadcrumbs %}<a href="/">Home</a> &rarr; Sign up{% endblock breadcrumbs %}
 
 {% block content %}
 
-<h1>Create Profile</h1>
+<h1>Sign up</h1>
 
 <p>This is the create profile screen.</p>
 
@@ -17,42 +17,44 @@
 </div>
 {% endif %}
 
+<p>&nbsp;</p>
+
 <form method="post" action="" class="form-horizontal">
   {% csrf_token %}
   <div class="control-group">
     <label class="control-label" for="{{ form.email.auto_id }}">Email</label>
     <div class="controls">
-      <input type="text" id="{{ form.email.auto_id }}" name="{{ form.email.html_name }}" value="{{ form.email.value }}" placeholder="Email address...">
+      <input type="text" id="{{ form.email.auto_id }}" name="{{ form.email.html_name }}" value="{{ form.email.value }}" placeholder="email address...">
     </div>
   </div>
   <div class="control-group">
     <label class="control-label" for="{{ form.password1.auto_id }}">Password</label>
     <div class="controls">
-      <input type="password" id="{{ form.password1.auto_id }}" name="{{ form.password1.html_name }}" value="{{ form.password1.value }}" placeholder="Password...">
+      <input type="password" id="{{ form.password1.auto_id }}" name="{{ form.password1.html_name }}" value="{{ form.password1.value }}" placeholder="password...">
     </div>
   </div>
   <div class="control-group">
     <label class="control-label" for="{{ form.password2.auto_id }}">Confirm Password</label>
     <div class="controls">
-      <input type="password" id="{{ form.password2.auto_id }}" name="{{ form.password2.html_name }}" value="{{ form.password2.value }}" placeholder="Confirm your password...">
+      <input type="password" id="{{ form.password2.auto_id }}" name="{{ form.password2.html_name }}" value="{{ form.password2.value }}" placeholder="confirm your password...">
     </div>
   </div>
   <div>&nbsp;</div>
   <div class="control-group">
     <label class="control-label" for="{{ form.first_name.auto_id }}">First Name</label>
     <div class="controls">
-      <input type="text" id="{{ form.first_name.auto_id }}" name="{{ form.first_name.html_name }}" value="{{ form.first_name.value }}" placeholder="First name...">
+      <input type="text" id="{{ form.first_name.auto_id }}" name="{{ form.first_name.html_name }}" value="{{ form.first_name.value }}" placeholder="first name...">
     </div>
   </div>
   <div class="control-group">
     <label class="control-label" for="{{ form.last_name.auto_id }}">Last Name</label>
     <div class="controls">
-      <input type="text" id="{{ form.last_name.auto_id }}" name="{{ form.last_name.html_name }}" value="{{ form.last_name.value }}" placeholder="Last name...">
+      <input type="text" id="{{ form.last_name.auto_id }}" name="{{ form.last_name.html_name }}" value="{{ form.last_name.value }}" placeholder="last name...">
     </div>
   </div>
   <div class="control-group">
     <div class="controls">
-      <button type="submit" class="btn btn-primary">Save profile</button>
+      <input type="submit" value="Sign up" class="btn btn-primary" />
       <button type="submit" class="btn" name="cancel">Cancel</button>
     </div>
   </div>
@@ -64,10 +66,10 @@
 <p>Sidebar</p>
 {% endblock sidebar %}
 
-{#{% block script %}#}
-{#<script type="text/javascript">#}
-{#  $(document).ready(function(){#}
-{#    $('#id_email').focus();#}
-{#  });#}
-{#</script>#}
-{#{% endblock script %}#}
+{% block script %}
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('#id_email').focus();
+  });
+</script>
+{% endblock script %}
