--- a/templates/portfolios/holdings/create.html
+++ b/templates/portfolios/holdings/create.html
@@ -15,7 +15,7 @@
   <div class="control-group">
     <label class="control-label" for="stocks">Stock: </label>
     <div class="controls">
-      <input id="stock_display" type="text" name="stock_display" class="input-xxlarge" placeholder="examples: BlackBerry:TSX, Microsoft Corp:NASDAQ" />
+      <input id="stock_display" type="text" class="input-xxlarge" placeholder="examples: BlackBerry:TSX, Microsoft Corp:NASDAQ" />
     </div>
   </div>
   <div class="control-group">
@@ -23,7 +23,8 @@
       <input type="submit" class="btn btn-primary" value="Add holding" />
     </div>
   </div>
-  <input type="hidden" id="stock_id" name="stock_id" />
+  <input type="hidden" id="{{ form.stock.auto_id }}" name="stock" value="" />
+  <input type="hidden" id="{{ form.portfolio.auto_id }}" name="portfolio" value="{{ portfolio.id }}" />
 </form>
 
 {% endblock content %}
